<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.br.marketing</groupId>
    <artifactId>marketing</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <description></description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <junit.version>4.12</junit.version>
        <lombok.version>1.18.20</lombok.version>
        <spring.boot.version>1.5.4.RELEASE</spring.boot.version>
        <logback.version>1.2.9</logback.version>
        <slf4j.version>1.7.25</slf4j.version>
        <com.squareup.okhttp3.version>3.9.1</com.squareup.okhttp3.version>
        <fastjson.version>1.2.58</fastjson.version>
        <elastic-job.version>1.1.7-SNAPSHOT</elastic-job.version>
        <io.springfox.springfox-swagger2>2.6.1</io.springfox.springfox-swagger2>
        <io.springfox.springfox-swagger-ui>2.6.1</io.springfox.springfox-swagger-ui>
        <elasticsearch.version>7.7.1</elasticsearch.version>
        <log4j.onver.slf4j.version>1.7.25</log4j.onver.slf4j.version>
        <pulsar.version>1.0.0</pulsar.version>
        <speed.version>2.0.0</speed.version>
        <lettuce.version>6.2.0.RELEASE</lettuce.version>
        <reactor.version>3.4.24</reactor.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-amqp</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.9</version>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.9</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15to18</artifactId>
            <version>1.66</version>
        </dependency>
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>commons-validator</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>2.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.br.common</groupId>
            <artifactId>br-common</artifactId>
            <version>1.0.6-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <artifactId>json-lib</artifactId>
                    <groupId>net.sf.json-lib</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>commons-codec</artifactId>
                    <groupId>org.apache.commons</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-web</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <groupId>com.br.bsf</groupId>
                    <artifactId>bsf-ext</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- elasticJob -->

        <dependency>
            <groupId>com.dangdang</groupId>
            <artifactId>br-elastic-job-core</artifactId>
            <version>${elastic-job.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.dangdang</groupId>
            <artifactId>br-elastic-job-spring</artifactId>
            <version>${elastic-job.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>spring-context</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- 用于log4j通过slf4j转向logback 的一个适配包 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${log4j.onver.slf4j.version}</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>aliyun-repos</id>
            <name>aliyun Releases</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>100credit</id>
            <url>http://192.168.162.106:8081/nexus/content/groups/public/</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>100credit_release</id>
            <name>100credit Release Repository</name>
            <url>http://192.168.162.106:8081/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>100credit_snapshots</id>
            <name>100credit Snapshot Repository</name>
            <url>http://192.168.162.106:8081/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>${reactor.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>Dalston.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.br.speed</groupId>
                <artifactId>speed-client</artifactId>
                <version>${speed.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>utf8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modules>
        <module>marketing-api</module>
        <module>marketing-inner-api</module>
        <module>marketing-task</module>
        <module>marketing-utils</module>
        <module>marketing-push-task</module>
        <module>marketing-cs</module>
        <module>marketing-check</module>
        <module>marketing-sync</module>
        <module>mybatis-generator</module>
        <module>marketing-tools</module>
        <module>marketing-mq-consumer</module>
        <module>marketing-data-monkey</module>
        <!--        <module>marketing-fast-task</module>-->
    </modules>
</project>
